--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@aws-amplify/auth": "6.0.27",
         "@aws-amplify/ui-react": "6.1.6",
+        "@emailjs/browser": "^4.4.1",
         "@emotion/cache": "11.11.0",
         "@emotion/react": "11.11.3",
         "@emotion/styled": "11.11.0",
@@ -145,9 +146,9 @@
         "@tailwindcss/aspect-ratio": "0.4.2",
         "@tailwindcss/typography": "0.5.10",
         "@types/autosuggest-highlight": "3.2.3",
-        "@types/babel-traverse": "6.25.10",
         "@types/babel__parser": "7.1.1",
         "@types/babel__traverse": "7.20.5",
+        "@types/babel-traverse": "6.25.10",
         "@types/crypto-js": "4.2.1",
         "@types/draft-js": "0.11.17",
         "@types/draftjs-to-html": "0.8.4",
