--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "framer-motion": "10.18.0",
         "google-map-react": "2.2.1",
         "history": "5.3.0",
+        "html-to-image": "^1.11.13",
         "html2pdf.js": "^0.10.3",
         "i18next": "23.7.16",
         "jquery": "^3.7.1",
@@ -78,6 +79,7 @@
         "popper.js": "^1.16.1",
         "prismjs": "1.29.0",
         "prop-types": "15.8.1",
+        "qrcode.react": "^4.2.0",
         "qs": "6.11.2",
         "react": "18.2.0",
         "react-apexcharts": "1.4.1",
@@ -146,9 +148,9 @@
         "@tailwindcss/aspect-ratio": "0.4.2",
         "@tailwindcss/typography": "0.5.10",
         "@types/autosuggest-highlight": "3.2.3",
+        "@types/babel-traverse": "6.25.10",
         "@types/babel__parser": "7.1.1",
         "@types/babel__traverse": "7.20.5",
-        "@types/babel-traverse": "6.25.10",
         "@types/crypto-js": "4.2.1",
         "@types/draft-js": "0.11.17",
         "@types/draftjs-to-html": "0.8.4",
