--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "keycode": "2.2.1",
         "leaflet": "^1.9.4",
         "lodash": "4.17.21",
+        "lucide-react": "^0.544.0",
         "marked": "4.3.0",
         "material-react-table": "2.12.1",
         "material-table": "^2.0.5",
@@ -148,9 +149,9 @@
         "@tailwindcss/aspect-ratio": "0.4.2",
         "@tailwindcss/typography": "0.5.10",
         "@types/autosuggest-highlight": "3.2.3",
-        "@types/babel-traverse": "6.25.10",
         "@types/babel__parser": "7.1.1",
         "@types/babel__traverse": "7.20.5",
+        "@types/babel-traverse": "6.25.10",
         "@types/crypto-js": "4.2.1",
         "@types/draft-js": "0.11.17",
         "@types/draftjs-to-html": "0.8.4",
